--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST API",
   "main": "app.js",
   "scripts": {
-    "test": "node app.js"
+    "start": "node app.js"
   },
   "author": "Anthony Oyathelemhi",
   "license": "ISC",
